syntax = "proto3";
import "shared/enums.proto";

option java_package = "com.joango";
option java_multiple_files = true;

message PhoneNumberDTO {
  string number = 1;
  PhoneType type = 2;
}
